Fix movimientos total fixed pos improve general visibility of footers

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -152,6 +152,7 @@ body {
   }
 
   .nav-bar {
+    width: 100%;
     align-items: center;
     background-color: #4285f4;
     color: #fff;
@@ -207,4 +208,80 @@ body {
 
 .icon-button.toggled {
     color: green;
+}
+
+.footer-container {
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+    bottom:0;
+    position:fixed;
+}
+
+.center-element {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.radio-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.radio-item {
+    margin-bottom: 10px;
+}
+
+.radio-label {
+    font-size: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-left: 35px;
+}
+
+.radio-input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.radio-icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+.radio-label:hover .radio-icon {
+    background-color: #ccc;
+}
+
+.radio-input:checked ~ .radio-icon {
+    background-color: #2196F3;
+}
+
+.radio-icon:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.radio-input:checked ~ .radio-icon:after {
+    display: block;
+}
+
+.radio-label .radio-icon:after {
+    top: 7px;
+    left: 7px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: white;
 }
